# agent-harness-90m

./: .env.example  .gitignore  README.md  agent.py  harness.yaml  memory.md  pyproject.toml
harness/: budget.py  logger.py  memory.py  policy.py  report.py  runner.py  task.py  tools.py
policies/: default.yaml
tasks/: example_digest.md  example_research.md
tools/: list_files.py  read_file.py  summarize.py  web_search.py  write_file.py
