[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-harness-90m"
version = "0.1.0"
description = "A minimal agent harness: task intake, tool registry, policy gate, budget, logs, reports."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
agent = "agent:main"

[tool.setuptools.packages.find]
include = ["harness*", "tools*"]
